--- a/app/assets/stylesheets/modules/_common.scss
+++ b/app/assets/stylesheets/modules/_common.scss
@@ -2,6 +2,10 @@
   display: flex;
 }
 
+.display-none{
+  display: none;
+}
+
 .text-center{
   text-align: center;
 }
@@ -12,4 +16,8 @@
 
 .bgc-gray{
   background-color: $bgc-gray;
+}
+
+.width-100{
+  width: 100%;
 }
