--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,3 +26,12 @@
 // ポスト----------------------
 @import "modules/post-new";
 // ---------------------------
+
+// ポスト詳細----------------------
+@import "modules/post__detail";
+// ---------------------------
+
+// font-awesome----------------------
+@import 'font-awesome-sprockets';
+@import 'font-awesome';
+// ---------------------------
