--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,46 +1,4 @@
-%div
-  商品名
-  = @post.name
-%div
-  - @images.each_with_index do |i, index|
-    -# 画像1枚目とそれ以外でサイズを変更したいので、番号で管理
-    - if index == 0
-      %div
-        画像1枚目（サイズ大）
-        = image_tag "#{i.image}", class: "first_image"
-    - else
-      %div
-        画像2枚目以降（サイズ小）
-        = image_tag "#{i.image}", class: "sub-image"
-%div
-  価格  
-  = @post.price
-%div
-  商品説明
-  = @post.introduce
-
-%div
-  出品者
-  = @post.user.nickname
-%div
-  カテゴリー
-  = @post.category.name
-%div
-  商品の状態
-  = @post.status
-%div
-  配送料の負担
-  = @post.delivery_status
-%div
-  発送元の地域
-  = @post.user_address
-%div
-  発送日の目安
-  = @post.shipping
-  
--# リンク-------------------------
-- if user_signed_in? && current_user.id == @post.user_id
-  = link_to "編集", edit_post_path(@post)
-  = link_to "削除", post_path(@post), method: :delete
-- if user_signed_in? && current_user.id != @post.user_id
-  ここに購入リンクを置く予定です
+= render 'top__header'
+= render 'post__detail'
+= render 'top__banner'
+= render 'top__footer'
