--- a/app/assets/stylesheets/modules/_post-new.scss
+++ b/app/assets/stylesheets/modules/_post-new.scss
@@ -26,30 +26,14 @@
       font-weight: 600;
     }
     &__uploader{
+      display: flex;
+      width: 100%;
+      height: 191px;
       margin-top: 12px;
       font-size: 14px;
       background-color: #f8f8f8;
       border: 0.5px dashed #ccc;
-      min-height: 184px;
-      text-align: center;
-      line-height: 184px;
       position: relative;
-      display: flex;
-      &--info{
-        position: absolute;
-        top: -70px;
-        left: 210px;
-        z-index: 3;
-        & p{
-          height: 20px;
-        }
-      }
-      &--item{
-        width: 25%;
-        & input{
-          display: none;
-        }
-      }
     }
     &--input{
       @include form-input(598px);
@@ -91,3 +75,36 @@
   }
 }
 
+.preview{
+  height: 147.5px;
+  width: 147.5px;
+  background-size: contain;
+  padding: 0 5px;
+}
+
+.image-preview_btn{
+  text-align: center;
+  padding: 8px;
+  border-top: 1px solid #cccccc;
+  cursor: pointer;
+  &:hover{
+    transition: 0.5s;
+    background-color: #cccccc;
+  }
+}
+
+.upload-label{
+  display: block;
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
+.upload-label__text{
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  z-index: 0;
+  width: 100%;
+  transform: translate(0, -50%);
+}
