--- a/app/assets/stylesheets/modules/_top__main.scss
+++ b/app/assets/stylesheets/modules/_top__main.scss
@@ -90,6 +90,10 @@
         height: 240px;
         margin: 0 25px;
         position: relative;
+        a{
+          color: black;
+          text-decoration: none;
+        }
         &--image {
           width: 100%;
           height: 65%;
