--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,8 @@
 @import "mixin/form-require";
 @import "mixin/submit-btn";
 @import "mixin/form-input";
+@import "mixin/detail_btn";
+@import "mixin/change-btn";
 // ---------------------------
 
 // 共通のcss---------------------
@@ -27,11 +29,9 @@
 @import "modules/post-new";
 // ---------------------------
 
+
+
 // ポスト詳細----------------------
 @import "modules/post__detail";
 // ---------------------------
 
-// font-awesome----------------------
-@import 'font-awesome-sprockets';
-@import 'font-awesome';
-// ---------------------------
