--- a/app/views/posts/_post__detail.html.haml
+++ b/app/views/posts/_post__detail.html.haml
@@ -71,14 +71,14 @@
         .post__detail__inner__top__item__option
           %ul.post__detail__inner__top__item__option__favorite
             %li.post__detail__inner__top__item__option__favorite--icon
-              = icon('fas', 'star', class: 'star-icon')
+              %i.fas.fa-star.star-icon
             %li.post__detail__inner__top__item__option__favorite--text
               お気に入り
             %li.post__detail__inner__top__item__option__favorite--count
               0
           %ul.post__detail__inner__top__item__option__report
             %li.post__detail__inner__top__item__option__report--icon
-              = icon('fas', 'flag', class: 'flag-icon')
+              %i.fas.fa-flag.flag-icon
             %li.post__detail__inner__top__item__option__report--text
               不適切な商品の通報
       .post__detail__inner__top__comment
@@ -90,17 +90,16 @@
             %br
             不快な言葉遣いなどは利用制限や退会処分となることがあります。
           =f.submit class:"post__detail__inner__top__comment__btn", value:"コメントする"
-          = icon('fas', 'comment', class: 'post__detail__inner__top__comment__icon')
- 
+          %i.fas.fa-comment.comment-icon.post__detail__inner__top__comment__icon
     %ul.post__detail__inner__links
       %li.post__detail__inner__links__previous
         =link_to "#" do
-          = icon('fas', 'chevron-left', class: 'left-icon')
+          %i.fas.fa-chevron-left.chevron-left-icon.left-icon
           前の商品
       %li.post__detail__inner__links__following
         =link_to "#" do
           次の商品
-          = icon('fas', 'chevron-right', class: 'right-icon')
+          %i.fas.fa-chevron-right.chevron-right-icon.right-icon
     .post__detail__inner__relatedItems
       %h1.post__detail__inner__relatedItems--text
         ベビー・キッズをもっと見る
