--- a/app/assets/stylesheets/mixin/_detail_btn.scss
+++ b/app/assets/stylesheets/mixin/_detail_btn.scss
@@ -1,6 +1,6 @@
-@mixin detail-btn(){
+@mixin detail-btn($margin-top){
   display: block;
-  margin-top: 16px;
+  margin-top: $margin-top;
   line-height: 56px;
   text-align: center;
   a{
