--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -20,13 +20,13 @@
               %ul#previews.display-flex.width-100
                 %li.input.width-100
                   // 画像を取り込むインプットボタン
-                  %label.upload-label{for: "sampleId"}
+                  %label.upload-label
                     .upload-label__text
                       %div
                         %p ドラッグアンドドロップ
                         %p またはクリックしてファイルをアップロード
                     .input-area.display-none
-                      = image.file_field :name, class: "hidden image_upload", id: "sampleId"
+                      = image.file_field :name, class: "hidden image_upload"
       -# 商品名と商品説明---------------------------------------------------------------------------------
       .post-new__section
         .post-new__field
