--- a/app/assets/stylesheets/modules/_destroy.scss
+++ b/app/assets/stylesheets/modules/_destroy.scss
@@ -6,14 +6,14 @@
 
   &__btn{
     border-radius: 4px;
-    border: #5ab4bd;
+    border: #3CCBCD;
     font-size: 14px;
     color: white;
     padding: 15px 0px;
     text-decoration: none;
     margin: 0px 190px;
     display: block;
-    background-color: #5ab4bd;
+    background-color: #3CCBCD;
     text-align: center;
   }
 }
