--- a/app/assets/stylesheets/modules/_show.scss
+++ b/app/assets/stylesheets/modules/_show.scss
@@ -1,5 +1,5 @@
 @mixin active_show() {
-  border-top: 2px solid #5ab4bd;
+  border-top: 2px solid #3CCBCD;
   line-height: 0px;
   text-align: center;
   padding: 35px;
