--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -28,128 +28,6 @@
                         %p またはクリックしてファイルをアップロード
                     .input-area.display-none
                       = image.file_field :name, class: "hidden image_upload", id: "sampleId"
-        -# 商品名と商品説明---------------------------------------------------------------------------------
-        .post-new__section
-          .post-new__field
-            %label
-              商品名
-            %span.form-require
-              必須
-            -# #name
-            -# .post-new__field--input{ type: "text", placeholder: "40文字まで" }
-            -# .post-new__field--input{ type: "text", placeholder: "40文字まで" }
-            = form.text_field :name, type: "text", placeholder: "40文字まで", class: "post-new__field--input"
-          .post-new__field
-            %label
-              商品の説明
-            %span.form-require
-              必須
-            -# #introduce
-            -# %textarea.post-new__field--input{ rows: 7, placeholder: "商品の説明（色、素材、重さ、定価、注意点など）" }
-            = form.text_area :introduce, rows: 7, placeholder: "商品の説明（色、素材、重さ、定価、注意点など）", class: "post-new__field--input"
-            -# rowsで行数を指定してます。
-        -# カテゴリと状態-------------------------------------------------------------------------------------
-        .post-new__section
-          .post-new__section--title
-            商品の詳細
-            %i.fa.fa-question-circle
-          .post-new__field
-            %label
-              カテゴリ
-            %span.form-require
-              必須
-            -# #category_id
-            -# %select.post-new__field--input#category_id
-            -#   %option 選択してくれー
-            = form.collection_select :category_id, @parents, :id, :name, class: "post-new__field--input", id: "category_id"
-          .post-new__field
-            %label
-              商品の状態
-            %span.form-require
-              必須
-            -# #status
-            -# %select.post-new__field--input
-            -#   %option 選択してくれー
-            = form.select :status, Post.statuses.keys, class: "post-new__field--input"
-        -# 配送関係-------------------------------------------------------------------------------------
-        .post-new__section
-          .post-new__section--title
-            配送について
-            %i.fa.fa-question-circle
-          .post-new__field
-            %label
-              配送料の負担
-            %span.form-require
-              必須
-            -# #delivery_status
-            -# %select.post-new__field--input
-            -#   %option 選択してくれー
-            = form.select :delivery_status, Post.delivery_statuses.keys, class: "post-new__field--input"
-          .post-new__field
-            %label
-              発送元の地域
-            %span.form-require
-              必須
-            -# #user_address
-            -# %select.post-new__field--input
-            -#   %option 選択してくれー
-            = form.select :user_address, Post.user_addresses.keys, class: "post-new__field--input"
-          .post-new__field
-            %label
-              発送までの日数
-            %span.form-require
-              必須
-            -# #shipping
-            -# %select.post-new__field--input
-            -#   %option 選択してくれー
-            = form.select :shipping, Post.shippings.keys, class: "post-new__field--input"
-        -# 価格---------------------------------------------------------------------------------
-        .post-new__section
-          .post-new__section--title
-            価格（¥300〜9,999,999）
-            %i.fa.fa-question-circle
-          .post-new__field
-            .post-new__field__money
-              %div
-                %label
-                  販売価格
-                %span.form-require
-                  必須
-              -# #price
-              %div
-                ¥
-                -# #money-inputで入力金額を取得
-                -# %input.post-new__field--input#money-input{ type: "number", placeholder: "例）10,000" }
-                = form.text_field :price, type: "number", placeholder: "例）10,000" , class: "post-new__field--input", id: "money-input"
-          .post-new__field
-            .post-new__field__money
-              %div
-                %label
-                  販売手数料（10%）
-              -# #delivery-feeで販売手数料を表示
-              #delivery-fee
-                = "-"
-          .post-new__field
-            .post-new__field__money
-              %div
-                %label
-                  販売利益
-              -# #form-profitで販売利益を表示
-              #form-profit
-                = "-"
-        -# 送信ボタン---------------------------------------------------------------------------------
-        .post-new__section
-          .post-new__field
-            .post-new__field__confirmation
-              %p
-                禁止されている出品 、 行為 を必ずご確認ください。
-                %br
-                またブランド品でシリアルナンバー等がある場合はご記載ください。 偽ブランドの販売 は犯罪であり処罰される可能性があります。
-                %br
-                また、出品をもちまして 加盟店規約 に同意したことになります。
-            .post-new__field
-              %input.post-new__field__confirmation--submit{ type: "submit", value: "出品する" }
-            .post-new__field
-              .post-new__field__confirmation__close
-                = link_to "閉じる", root_path
-    = render 'devise/shared/footer'
+        -# 商品説明から送信までform
+        = render "form", form: form
+  = render 'devise/shared/footer'
