--- a/app/views/posts/_top__header.html.haml
+++ b/app/views/posts/_top__header.html.haml
@@ -20,7 +20,7 @@
       - if user_signed_in?
         .top__header__inner__nav__right
           %li.top__header__inner__nav__right__new
-            = link_to "マイページ", mypage_path
+            = link_to "マイページ", mypage_users_path
       - else
         %ul.top__header__inner__nav__right
           %li.top__header__inner__nav__right__login
