card controller,model

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,3 +10,4 @@
   %body
     %script{crossorigin: "anonymous", src: "https://kit.fontawesome.com/b167c0ffa1.js"}
     = yield
+    %script{src: "https://js.pay.jp/", type: "text/javascript"}
