--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,3 +38,8 @@
 // ポスト詳細----------------------
 @import "modules/post__detail";
 // ---------------------------
+
+// カード情報------------------
+@import "modules/card";
+@import "modules/card-registration";
+//------------------------------
