--- a/app/views/cards/index.html.haml
+++ b/app/views/cards/index.html.haml
@@ -6,7 +6,7 @@
 .show-main
   .show-main__contents
     .show-main__contents__right
-      =render 'cards/registration'
+      =render 'cards/card'
     = render 'users/show__left'
   -# footer
   = render 'posts/top__banner'
