--- a/app/views/users/_show__left.html.haml
+++ b/app/views/users/_show__left.html.haml
@@ -73,7 +73,7 @@
         %h6 住所特定
         %i.fas.fa-chevron-right.menu-icon
     %li.show-main__contents__left--list__item
-      = link_to new_card_path do
+      = link_to cards_path do
         %h6 支払い方法
         %i.fas.fa-chevron-right.menu-icon
     %li.show-main__contents__left--list__item
