--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -26,7 +26,7 @@
                         %p ドラッグアンドドロップ
                         %p またはクリックしてファイルをアップロード
                     .input-area.display-none
-                      = image.file_field :name, class: "hidden image_upload"
+                      = image.file_field :image, class: "hidden image_upload"
       -# 商品説明から送信までform
       = render "form", form: form
   = render 'devise/shared/footer'
