--- a/app/views/posts/_edit__form.html.haml
+++ b/app/views/posts/_edit__form.html.haml
@@ -26,16 +26,16 @@
       必須
     -# #category_id
     #category_field
-      = form.collection_select :category_id, @parents, :id, :name, { include_blank: "---", selected: "#{@post.category.parent.parent.id}" }, id: "category_form", class: "post-new__field--input"
-      = form.collection_select :category_id, @post.category.parent.siblings, :id, :name, { include_blank: "---", selected: "#{@post.category.parent.id}" }, id: "category_form", class: "post-new__field--input child_category_id"
-      = form.collection_select :category_id, @post.category.siblings, :id, :name, { include_blank: "---"}, id: "category_form", class: "post-new__field--input gc_category_id"
+      = form.collection_select :category_id, @parents, :id, :name, { include_blank: "---", selected: "#{@post.category.parent.parent.id}" }, id: "category_form", class: "post-new__field--input", required: "require"
+      = form.collection_select :category_id, @post.category.parent.siblings, :id, :name, { include_blank: "---", selected: "#{@post.category.parent.id}" }, id: "category_form", class: "post-new__field--input child_category_id", required: "require"
+      = form.collection_select :category_id, @post.category.siblings, :id, :name, { include_blank: "---"}, id: "category_form", class: "post-new__field--input gc_category_id", required: "require"
   .post-new__field
     %label
       商品の状態
     %span.form-require
       必須
     -# #status
-    = form.select :status, Post.statuses.keys, class: "post-new__field--input"
+    = form.select :status, Post.statuses.keys, class: "post-new__field--input", required: "require"
 -# 配送関係-------------------------------------------------------------------------------------
 .post-new__section
   .post-new__section--title
