カード登録機能と購入機能追加

--- a/app/assets/stylesheets/modules/_post__detail.scss
+++ b/app/assets/stylesheets/modules/_post__detail.scss
@@ -21,6 +21,7 @@
           align-items: center;
           margin: 16 auto 0;
           &__picture{
+            position: relative;
             object-fit: cover;
             height: 346px;
           }
