--- a/app/views/cards/_card.html.haml
+++ b/app/views/cards/_card.html.haml
@@ -1,23 +1,16 @@
-.show-main__container
-  .show-main__container--text
-    支払い方法
-  .show-main__container__section
-    .show-main__container__section__content
-      クレジットカード一覧
-    %ul.show-main__container__section__lists
-      %li.show-main__container__section__lists__list
-        .show-main__container__section__lists__list__top
-          .show-main__container__section__lists__list__top__image
-            = image_tag asset_path("google-play-badge.png"), height: '20', width: '34',class: "card--image"
-          .show-main__container__section__lists__list__top__delete
-            = link_to "削除する", mypage_users_path, class: 'btn'
-            
-        .show-main__container__section__lists__list__number
-          ************0000
-        .show-main__container__section__lists__list__date
-          12/23
-
-  .show-main__container__link
-    .show-main__container__link__btn
-      = link_to new_card_path do
-        カードを追加
+%ul.show-main__container__section__lists
+  %li.show-main__container__section__lists__list
+    .show-main__container__section__lists__list__top
+      .show-main__container__section__lists__list__top__image
+        = image_tag asset_path("google-play-badge.png"), height: '20', width: '34',class: "card--image"
+      .show-main__container__section__lists__list__top__delete
+        = link_to "削除する", card_path(card), method: :delete, class: 'btn', data: { confirm: '削除してよろしいですか？' }
+        
+    .show-main__container__section__lists__list__number
+      - customer = Payjp::Customer.retrieve(card.customer_id)
+      - @default_card_information = customer.cards.retrieve(card.card_id)
+      = "**** **** **** " + @default_card_information.last4
+    .show-main__container__section__lists__list__date
+      - exp_month = @default_card_information.exp_month.to_s
+      - exp_year = @default_card_information.exp_year.to_s.slice(2,3)
+      = exp_month + " / " + exp_year
