コンフリクトの解消と不要な記述の削除

--- a/app/views/cards/new.html.haml
+++ b/app/views/cards/new.html.haml
@@ -1,7 +1,7 @@
 = render 'posts/top__header'
 
 .show-header
-  .show-header__contents  FURIMA > マイページ
+  .show-header__contents  FURIMA > マイページ > 支払い方法
 
 .show-main
   .show-main__contents
