--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,7 +33,9 @@
 @import "modules/post-new";
 // ---------------------------
 
-
+// 商品購入確認ページ---------------------------
+@import "modules/buy__confirmation";
+// ---------------------------
 
 // ポスト詳細----------------------
 @import "modules/post__detail";
