--- a/app/assets/stylesheets/modules/_show.scss
+++ b/app/assets/stylesheets/modules/_show.scss
@@ -49,7 +49,7 @@
         }
         &__contents--name{
           height: 30px;
-          width: 30px;
+          width: 100%;
           text-align: center;
           margin: 0 auto;
           margin-top: 8px;
