--- a/app/views/posts/buy.html.haml
+++ b/app/views/posts/buy.html.haml
@@ -2,14 +2,14 @@
   .buy__main__header
     =link_to "#" do
       .buy__main__header__icon
-        = image_tag asset_path('logo.png'), height: '49', width: '185'
+        = image_tag asset_path('logo.png'), size: '185x49' 
   .buy__main__contents
     .buy__main__contents__form
       %section.buy__main__contents__form__confirmation
         購入内容の確認
       %section.buy__main__contents__form__products
         .buy__main__contents__form__products__image
-        = image_tag asset_path("#{@post.post_images[0].image}"),height: "65",width: "65"
+        = image_tag asset_path("#{@post.post_images[0].image}"), size: 65
         .buy__main__contents__form__products__right
           .buy__main__contents__form__products__right__names
           = @post.name
@@ -51,7 +51,7 @@
     .buy__main__footer__top--info
       %ul 
         %li プライバシーポリシー
-        %li メルカリ利用規約
+        %li フリマ利用規約
         %li 特定商取引に関する表記
       =link_to "#" do
         .buy__main__footer__middle--info
