_formの修正とedit_formの削除

--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -32,6 +32,5 @@
                     .image-preview_btn
                       .image-preview_btn_delete
                         削除
-
-      = render "edit__form", form: form
+      = render "form", form: form
   = render 'devise/shared/footer'
