--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -26,15 +26,19 @@
       必須
     -# #category_id
     #category_field
-      = form.collection_select :category_id, @parents, :id, :name, { include_blank: "---", selected:"" }, id: "category_form", class: "post-new__field--input", required: "require"
-    -# = form.collection_select :category_id, @parents, :id, :name, { prompt: "---" }, id: "category_form", class: "post-new__field--input"
+      - if @post.category
+        = form.collection_select :category_id, @parents, :id, :name, { include_blank: "---", selected: "#{@post.category.parent.parent.id}" }, id: "category_form", class: "post-new__field--input", required: "require"
+        = form.collection_select :category_id, @post.category.parent.siblings, :id, :name, { include_blank: "---", selected: "#{@post.category.parent.id}" }, id: "category_form", class: "post-new__field--input child_category_id", required: "require"
+        = form.collection_select :category_id, @post.category.siblings, :id, :name, { include_blank: "---"}, id: "category_form", class: "post-new__field--input gc_category_id", required: "require"
+      - else
+        = form.collection_select :category_id, @parents, :id, :name, { include_blank: "---" }, id: "category_form", class: "post-new__field--input", required: "require"
   .post-new__field
     %label
       商品の状態
     %span.form-require
       必須
     -# #status
-    = form.select :status, Post.statuses.keys, { include_blank: "---", selected:"" }, class: "post-new__field--input"
+    = form.select :status, Post.statuses.keys, { include_blank: "---"}, class: "post-new__field--input"
 -# 配送関係-------------------------------------------------------------------------------------
 .post-new__section
   .post-new__section--title
@@ -46,21 +50,21 @@
     %span.form-require
       必須
     -# #delivery_status
-    = form.select :delivery_status, Post.delivery_statuses.keys, { include_blank: "---", selected:"" }, class: "post-new__field--input", required: "require"
+    = form.select :delivery_status, Post.delivery_statuses.keys, { include_blank: "---"}, class: "post-new__field--input", required: "require"
   .post-new__field
     %label
       発送元の地域
     %span.form-require
       必須
     -# #user_address
-    = form.select :user_address, Post.user_addresses.keys, { include_blank: "---", selected:"" }, class: "post-new__field--input", required: "require"
+    = form.select :user_address, Post.user_addresses.keys, { include_blank: "---" }, class: "post-new__field--input", required: "require"
   .post-new__field
     %label
       発送までの日数
     %span.form-require
       必須
     -# #shipping
-    = form.select :shipping, Post.shippings.keys, { include_blank: "---", selected:"" }, class: "post-new__field--input", required: "require"
+    = form.select :shipping, Post.shippings.keys, { include_blank: "---" }, class: "post-new__field--input", required: "require"
 -# 金額---------------------------------------------------------------------------------
 .post-new__section
   .post-new__section--title
